[package]
edition = "2021"
name = "chainsafe_blst"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
blst = { path = "./blst/bindings/rust" }
hex = "0.4.3"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["full"] }
napi-derive = "2.12.2"
rand = "0.8.5"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
