[package]
edition = "2021"
name = "chainsafe_blst"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
blst = { version = "0.3.13", features = ["portable"] }
hex = "0.4.3"
napi = { version = "2.16.8", default-features = false, features = ["napi8"] }
napi-derive = "2.16.8"
rand = "0.8.5"

[build-dependencies]
napi-build = "2.1.3"

[profile.release]
lto = true
strip = "symbols"
