[package]
edition = "2021"
name = "swap-or-not-shuffle"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16.10", default-features = false, features = ["napi8", "async"] }
napi-derive = "2.12.2"
ethereum_hashing = "0.6.0"
ethereum-types = "0.14.1"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
